<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.3</version>
		<relativePath/> <!-- lookup parent from repository -->
	</parent>
	<groupId>com.pesocorporalehr</groupId>
	<artifactId>pesocorporal</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>pesocorporal</name>
	<description>Demo project for Spring Boot</description>
	<url/>
	<licenses>
		<license/>
	</licenses>
	<developers>
		<developer/>
	</developers>
	<scm>
		<connection/>
		<developerConnection/>
		<tag/>
		<url/>
	</scm>
	<properties>
		<java.version>17</java.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-validation</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>com.h2database</groupId>
			<artifactId>h2</artifactId>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>com.nedap.healthcare.archie</groupId>
			<artifactId>openehr-rm</artifactId>
			<version>3.13.1</version>
		</dependency>

		<dependency>
			<groupId>org.ehrbase.openehr.sdk</groupId>
			<artifactId>response-dto</artifactId>
			<version>2.22.0</version>
		</dependency>
		<dependency>
			<groupId>org.ehrbase.openehr.sdk</groupId>
			<artifactId>web-template</artifactId>
			<version>2.22.0</version>
		</dependency>
		<dependency>
			<groupId>org.ehrbase.openehr.sdk</groupId>
			<artifactId>opt-1.4</artifactId>
			<version>2.22.0</version>
		</dependency>
		<dependency>
			<groupId>org.ehrbase.openehr.sdk</groupId>
			<artifactId>client</artifactId>
			<version>2.22.0</version>
		</dependency>
		<dependency>
			<groupId>org.ehrbase.openehr.sdk</groupId>
			<artifactId>serialisation</artifactId>
			<version>2.22.0</version>
		</dependency>

		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>1.5.5.Final</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>2.0.9</version>
		</dependency>

		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

</project>
